# pawlos-ai-agent

./: .gitignore  BLUEPRINT.md  Cargo.toml  README.md  package.json
.github/workflows/: build-release.yml
.sisyphus/drafts/: blueprint-plan.md
.sisyphus/plans/: blueprint-plan.md
agents/CodeReviewer/: AGENT.md  agent.yaml
context/: LONGTERM.md  MEMORY.md  SOUL.md  USER.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  onboard.rs  opentui_welcome.rs  repl.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error.rs  lib.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  store.rs  tool.rs  vector.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agent_manager.rs  agent_registry.rs  heartbeat.rs  lib.rs  session.rs  turn.rs  web_server.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: builder.rs  lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: catalog.rs  client.rs  lib.rs  registry.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  browser.rs  executor.rs  file.rs  lib.rs  mcp.rs  shell.rs  skill.rs  web.rs
scripts/: install.ps1  install.sh  package.json
skills/skills/: browser_automation.skill  create_skill.skill  make_pdf.skill  mcp_brave_search.skill  mcp_context7.skill  mcp_fetch.skill  mcp_filesystem.skill  mcp_git.skill  mcp_github.skill  mcp_memory.skill  mcp_playwright.skill  mcp_sequential_thinking.skill  mcp_sqlite.skill
tunnels/: package-lock.json  package.json
tunnels/src/: discord.ts  index.ts  pawlos-client.ts  telegram.ts
web/: index.html  package.json
web/src/: main.ts
