[workspace]
members = [
    "crates/core",
    "crates/memory",
    "crates/orchestrator",
    "crates/provider",
    "crates/tools",
    "crates/prompt",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Database
rusqlite = { version = "0.31", features = ["bundled"] }
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
# CLI
clap = { version = "4", features = ["derive", "color"] }
# Errors
anyhow = "1"
thiserror = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Config
config = "0.14"
# File paths
dirs = "5"
# Async traits
async-trait = "0.1"
# UUIDs
uuid = { version = "1", features = ["v4"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Futures
futures = "0.3"
# Byte streams
bytes = "1"
# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Terminal
crossterm = "0.27"
indicatif = "0.17"
colored = "2"
dialoguer = "0.11"
# YAML skill parsing
# (reuse serde_yaml above)
# Regex
regex = "1"
# URL encoding
urlencoding = "2"
# Tempfile
tempfile = "3"
# Binary serialization (for embeddings)
bincode = "1"
