[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
pawlos-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
uuid = { workspace = true }
bincode = { workspace = true }
