[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
pawlos-core = { path = "../core" }
memory = { path = "../memory" }
provider = { path = "../provider" }
prompt = { path = "../prompt" }
tools = { path = "../tools" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
