[package]
name = "prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
pawlos-core = { path = "../core" }
memory = { path = "../memory" }
provider = { path = "../provider" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
