[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
memory = { path = "../memory" }
orchestrator = { path = "../orchestrator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
serde_yaml = { workspace = true }
